Issue #SB-30511 fix:dropdown overlap

--- a/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
+++ b/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
@@ -66,7 +66,9 @@
 }
 
 ::ng-deep {
-
+   .cdk-overlay-container{
+    z-index: 1 !important;
+   }
   .custom_mat_dd .mat-select-arrow-wrapper {
     vertical-align: bottom !important;
   }
